[package]
name = "wiener"
description = "Rendering API for OpenGL and Vulkan"
readme = "README.md"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/No-tengo-nombre/wiener/"
license = "MIT"
keywords = ["graphics", "opengl", "gamedev", "visualization"]
categories = ["graphics", "rendering", "rendering::engine", "rendering::graphics-api"]

[workspace]
members = [
    "crates/*",
]

[dependencies]
wiener_internal = { path = "crates/wiener_internal", version = "0.1.1" }

[dev-dependencies]
env_logger = "0.10.0"
gl = "0.14.0"
log = "0.4.17"

[[example]]
name = "gl_framebuffer"
path = "examples/gl/framebuffer/main.rs"

[[example]]
name = "gl_model_obj"
path = "examples/gl/model_obj/main.rs"

[[example]]
name = "gl_model_off"
path = "examples/gl/model_off/main.rs"

[[example]]
name = "gl_msaa_framebuffer"
path = "examples/gl/msaa_framebuffer/main.rs"

[[example]]
name = "gl_texture"
path = "examples/gl/texture/main.rs"

[[example]]
name = "gl_triangle"
path = "examples/gl/triangle/main.rs"

[[example]]
name = "gl_uniform"
path = "examples/gl/uniform/main.rs"

[[example]]
name = "gl_window"
path = "examples/gl/window/main.rs"
