[package]
name = "wiener_core"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/No-tengo-nombre/wiener/"
license = "MIT"
keywords = ["graphics", "opengl", "gamedev", "visualization"]
categories = ["graphics", "rendering", "rendering::engine", "rendering::graphics-api"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
glfw = "0.46.0"
log = "0.4.17"
