[package]
name = "wiener_gl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wiener_core = { path = "../wiener_core" }
wiener_utils = { path = "../wiener_utils" }
env_logger = "0.10.0"
gl = "0.14.0"
glfw = "0.46.0"
log = "0.4.17"
