[package]
name = "wiener_gl"
version = "0.1.0"
edition = "2021"
description = "Crate that contains the OpenGL code for Wiener"
readme = "README.md"
repository = "https://github.com/No-tengo-nombre/wiener/"
license = "MIT"
keywords = ["graphics", "opengl", "gamedev", "visualization"]
categories = ["graphics", "rendering", "rendering::engine", "rendering::graphics-api"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wiener_core = { path = "../wiener_core", version = "0.1.0" }
wiener_utils = { path = "../wiener_utils", version = "0.1.0" }
env_logger = "0.10.0"
gl = "0.14.0"
glfw = "0.46.0"
log = "0.4.17"
num = "0.4.0"
