[package]
name = "wiener_vk"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/No-tengo-nombre/wiener/"
license = "MIT"
keywords = ["graphics", "opengl", "gamedev", "visualization"]
categories = ["graphics", "rendering", "rendering::engine", "rendering::graphics-api"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
